--- a/Test02/Views/KinhDoanh/QuanLySP.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLySP.cshtml
@@ -38,64 +38,67 @@
             </div>
 
         </div>
-        <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
-               id="sampleTable">
-            <thead>
-                <tr>
-                    <th>Mã sản phẩm</th>
-                    <th>Tên sản phẩm</th>
-                    <th>Hình ảnh</th>
-                    <th>Giá</th>
-                    <th>Đơn vị tính</th>
-                    <th>Ngày sản xuất</th>
-                    <th>Hạn sử dụng</th>
-                    <th>Tổng tồn</th>
-                    <th>Chức năng</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
+        <div class="table-responsive">
+            <table class="table table-hover table-bordered js-copytextarea table-responsive" cellpadding="0" cellspacing="0" border="0"
+                   id="sampleTable">
+                <thead>
                     <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.MaSP)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.TenSP)
-                        </td>
-                        <td>
-                            <img src="@item.HinhAnh" style="width:100px" />
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Gia)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.DonViTinh)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NgaySX)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.HanSD)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.TongTon)
-                        </td>
-
-                        <td>
-                            <a href="/KinhDoanh/ChinhSuaSP/@item.MaSP" class="btn btn-primary btn-sm edit"> Chỉnh sửa</a>
-
-                            ||
-                            <a href="/KinhDoanh/XoaSP/@item.MaSP" class="btn btn-primary btn-sm deleted">
-                                Xóa sản phẩm
-                            </a>
-                        </td>
+                        <th>Mã sản phẩm</th>
+                        <th>Tên sản phẩm</th>
+                        <th>Hình ảnh</th>
+                        <th>Giá</th>
+                        <th>Đơn vị tính</th>
+                        <th>Ngày sản xuất</th>
+                        <th>Hạn sử dụng</th>
+                        <th>Tổng tồn</th>
+                        <th>Chức năng</th>
                     </tr>
-                }
-            </tbody>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.MaSP)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TenSP)
+                            </td>
+                            <td>
+                                <img height="150" width="400" src="@item.HinhAnh" style="width:100px" />
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Gia)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DonViTinh)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NgaySX)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.HanSD)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TongTon)
+                            </td>
+
+                            <td>
+                                <a href="/KinhDoanh/ChinhSuaSP/@item.MaSP" class="btn btn-primary btn-sm edit"> Chỉnh sửa</a>
+
+                                ||
+                                <a href="/KinhDoanh/XoaSP/@item.MaSP" class="btn btn-primary btn-sm deleted">
+                                    Xóa sản phẩm
+                                </a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
 
 
-        </table>
+            </table>
+        </div>
+        
     </div>
 </div>
 
