--- a/Test02/Views/KinhDoanh/ChinhSuaDH.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaDH.cshtml
@@ -26,13 +26,14 @@
                 @Html.HiddenFor(model => model.MaNVLap)
                 @Html.HiddenFor(model => model.NgayLap)
                 @Html.HiddenFor(model => model.TinhTrangThanhToan)
-
-
+                @Html.HiddenFor(mode => mode.PhieuXuatKho)
+                @Html.HiddenFor(mode => mode.XuatHoaDon)
+                @Html.HiddenFor(mode => mode.TinhTrangGH)
                 <div class="form-group">
                     @Html.LabelFor(model => model.TrangThai, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-5">
                         <select class="form-control" id="TrangThai" name="TrangThai">
-                            <option selected="@Model.TrangThai">@Model.TrangThai</option>
+                            <option selected disabled>----Chọn----</option>
                             <option>Chưa xét duyệt</option>
                             <option>Đã xét duyệt</option>
                         </select>
@@ -42,7 +43,7 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.DiemGiao, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-5">
                         @Html.EditorFor(model => model.DiemGiao, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.DiemGiao, "", new { @class = "text-danger" })
                     </div>
