--- a/Test02/Views/KinhDoanh/ChinhSuaDL.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaDL.cshtml
@@ -6,87 +6,70 @@
     ViewBag.dl = "active";
     ViewBag.nd = "Chỉnh sửa đại lý";
 }
+<div class="row">
+    <div class="col-md-12">
+        <div class="tile">
+            <h3 class="tile-title">Chỉnh sửa đại lý @Model.MaDL</h3>
+            <div class="tile-body mt-3">
+                <form class="row" action="~/KinhDoanh/ThemDL" method="post">
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.MaDL)
 
-<div class="tile">
-    <h3 class="tile-title">Chỉnh sửa đại lý @Model.MaDL</h3>
-    <div class="tile-body">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-
-            <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.MaDL)
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.MaLoaiDL, "MaLoaiDL", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("MaLoaiDL", null, htmlAttributes: new { @class = "form-control" })
+                    <div class="form-group  col-md-2">
+                        <label class="control-label col-md-8 " for="MaLoaiDL">Mã loại đại lý</label>
+                        @Html.DropDownList("MaLoaiDL", null, htmlAttributes: new { @class = "form-control", required = "true" })
                         @Html.ValidationMessageFor(model => model.MaLoaiDL, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="form-group col-md-2">
+                        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-6" })
+                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", type = "text", required = "true" } })
                         @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        <input class="form-control text-box single-line" data-val="true" id="Password" name="Password" type="password" value="">
+                    <div class="form-group col-md-4">
+                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-6" })
+                        <input class="form-control text-box single-line" data-val="true" id="Password" name="Password" type="password" required>
                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.TenDL, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.TenDL, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="form-group col-md-4">
+                        <label class="control-label col-md-6" for="TenDL">Tên đại lý</label>
+                        @Html.EditorFor(model => model.TenDL, new { htmlAttributes = new { @class = "form-control", type = "text", required = "true" } })
                         @Html.ValidationMessageFor(model => model.TenDL, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.SDT, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="form-group col-md-4">
+                        <label class="control-label col-md-6" for="SDT">Số điện thoại đại lý</label>
+                        @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control", type = "tel", required = "true" } })
                         @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DiaChi, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="form-group col-md-4">
+                        <label class="control-label col-md-6" for="DiaChi">Địa chỉ đại lý</label>
+                        @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control", type = "text", required = "true" } })
                         @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="form-group col-md-4" >
+                        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", type = "email", required = "true" } })
                         @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
+                    <div class="form-group col-md-12 mt-3 ">
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Lưu " class="btn btn-default" />
+                        <a class="btn btn-outline-warning" href="~/KinhDoanh/QuanLyDL">
+                            Quay lại danh sách sản phẩm
+                        </a>
+                        <input type="submit" value="Cập nhật" class="btn btn-outline-success" style="margin-left:10px" />
                     </div>
-                </div>
+                </form>
             </div>
-        }
+        </div>
     </div>
 </div>
-
 <div>
-    <a href="~/KinhDoanh/QuanLyDL">
-        Quay lại danh sách sản phẩm
-    </a>
+    
 </div>
