--- a/Test02/Views/KinhDoanh/QuanLySP.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLySP.cshtml
@@ -39,7 +39,7 @@
 
         </div>
         <div class="table-responsive">
-            <table class="table table-hover table-bordered js-copytextarea table-responsive" cellpadding="0" cellspacing="0" border="0"
+            <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
                    id="sampleTable">
                 <thead>
                     <tr>
@@ -115,16 +115,16 @@
     }
 </script>
 <!-- Essential javascripts for application to work-->
-<script src="~/Content/js/jquery-3.2.1.min.js"></script>
+<!--<script src="~/Content/js/jquery-3.2.1.min.js"></script>
 <script src="~/Content/js/popper.min.js"></script>
 <script src="~/Content/js/bootstrap.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="src/jquery.table2excel.js"></script>
-<script src="~/Content/js/main.js"></script>
+<script src="~/Content/js/main.js"></script>-->
 <!-- The javascript plugin to display page loading on top-->
-<script src="~/Content/js/plugins/pace.min.js"></script>
+<!--<script src="~/Content/js/plugins/pace.min.js"></script>-->
 <!-- Page specific javascripts-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>-->
 <!-- Data table plugin-->
-<script type="text/javascript" src="~/Content/js/plugins/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="~/Content/js/plugins/dataTables.bootstrap.min.js"></script>
+<!--<script type="text/javascript" src="~/Content/js/plugins/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="~/Content/js/plugins/dataTables.bootstrap.min.js"></script>-->
