--- a/Test02/Views/KinhDoanh/BaoCao.cshtml
+++ b/Test02/Views/KinhDoanh/BaoCao.cshtml
@@ -140,7 +140,7 @@
 <div>
     @Html.ActionLink("Trở về trang chủ", "TrangChu")
 </div>
-<script src="~/Content/js/jquery-3.2.1.min.js"></script>
+@*<script src="~/Content/js/jquery-3.2.1.min.js"></script>*@A
 <script src="~/Content/js/popper.min.js"></script>
 <script src="~/Content/js/bootstrap.min.js"></script>
 <script src="~/Content/js/main.js"></script>
