--- a/Test02/Views/KinhDoanh/QuanLyDH.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDH.cshtml
@@ -79,7 +79,7 @@
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-sm-12 table-responsive">
                             <table data-cols-width="20,20,20,30,20,20,20,20,20,20,20" class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
                                 @*//Phần render từng dòng trong C#*@
                                 <thead>
