--- a/Test02/Views/KinhDoanh/TrangChu.cshtml
+++ b/Test02/Views/KinhDoanh/TrangChu.cshtml
@@ -103,7 +103,7 @@
 <div class="col-md-12">
     <div class="tile">
         <h3 class="tile-title">Tình trạng đơn hàng</h3>
-        <div>
+        <div class="table-responsive">
             <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
                    id="sampleTable">
                 <thead>
@@ -166,7 +166,7 @@
 <div class="col-md-12">
     <div class="tile">
         <h3 class="tile-title">Danh sách đại lý mới</h3>
-        <div>
+        <div class="table-responsive">
             <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
                    id="sampleTable">
                 <thead>
